[project]
name = "chatbot-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.25",
    "newspaper3k>=0.2.8",
    "protobuf==3.20.3",
    "pytube>=15.0.0",
    "readability-lxml>=0.8.4.1",
    "streamlit>=1.46.0",
    "wikipedia-api>=0.8.1",
    "youtube-transcript-api>=1.1.0",
]
